fix(toolbar): rewrite overflow check to work with overflow: visible
Because we need to set overflow to visible for toolbar select's
dropdown to work

--- a/src/styles/components/toolbar/__toolbar.sass
+++ b/src/styles/components/toolbar/__toolbar.sass
@@ -105,7 +105,7 @@ uni-toolbar
         order: 3
         margin: .1rem 0
         flex: 0 1 auto
-        overflow: auto
+        overflow: visible
 
         small
             @extend p
